<resources>
    <string name="app_name">CryptoAPI</string>
    <string name="enter_currency_pair">Enter currency pair</string>
    <string name="str_open">OPEN</string>
    <string name="str_low">LOW</string>
    <string name="str_volume">VOLUME</string>
    <string name="high">HIGH</string>
    <string name="last">LAST</string>
    <string name="str_refresh">Refresh</string>
    <string name="ask_price">ASK PRICE</string>
    <string name="qty">QTY</string>
    <string name="bid_price">BID PRICE</string>
    <string name="order_book">ORDER BOOK</string>
    <string name="hide_order_book">HIDE ORDER BOOK</string>
    <string name="view_order_book">VIEW ORDER BOOK</string>
    <string name="enter_valid_currency">Not a valid currency pair</string>
    <string name="enter_currency">Please enter a currency pair</string>
    <string name="no_open_order">No open order</string>
    <string name="enter_a_currency_pair_to_load_data">Enter a currency pair to load data</string>
    <string name="search">search</string>
</resources>