<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/five_dp"
        app:endIconMode="custom"
        app:boxBackgroundMode="none"
        app:endIconDrawable="@drawable/ic_small_search">


        <AutoCompleteTextView
            android:id="@+id/et_searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/dark_gray"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:hint="@string/enter_currency_pair"
            android:paddingStart="@dimen/fifteen_sp"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/rl_ticker_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/twenty_sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/searchInputlayout">

        <TextView
            android:id="@+id/tv_currency_pair_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BTCUSD"
            android:textColor="@color/black"
            android:textSize="@dimen/thirty_sp" />


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="19 Dec 2020, 15:44:33"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_open_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/thirty_sp"
            android:layout_below="@+id/tv_currency_pair_name"
            android:text="@string/str_open"/>

        <TextView
            android:id="@+id/tv_open_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_open_str"
            android:text="$ 23,142.05"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_sp" />


        <TextView
            android:id="@+id/tv_low_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/thirty_sp"
            android:layout_below="@+id/tv_open_value"
            android:text="@string/str_low"/>

        <TextView
            android:id="@+id/tv_low_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_low_str"
            android:text="$ 23,142.05"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_sp" />


        <TextView
            android:id="@+id/tv_volume_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/thirty_sp"
            android:layout_below="@+id/tv_low_value"
            android:text="@string/str_volume"/>

        <TextView
            android:id="@+id/tv_volume_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_volume_str"
            android:text="$ 23,142.05"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_sp" />


        <TextView
            android:id="@+id/tv_high_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/thirty_sp"
            android:layout_alignStart="@+id/tv_date"
            android:layout_below="@+id/tv_currency_pair_name"
            android:text="@string/high"/>

        <TextView
            android:id="@+id/tv_high_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_high_str"
            android:layout_alignStart="@+id/tv_date"
            android:text="$ 23,142.05"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_sp" />


        <TextView
            android:id="@+id/tv_last_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/thirty_sp"
            android:layout_alignStart="@+id/tv_date"
            android:layout_below="@+id/tv_high_value"
            android:text="@string/last"/>

        <TextView
            android:id="@+id/tv_last_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_last_str"
            android:layout_alignStart="@+id/tv_date"
            android:text="$ 23,142.05"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_sp" />


        <TextView
            android:id="@+id/tv_view_hide_order_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_volume_value"
            android:layout_alignStart="@+id/tv_date"
            android:layout_marginTop="@dimen/ten_dp"
            android:textStyle="bold"
            android:text="VIEW ORDER BOOK"
            android:textColor="@color/purple_700"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_orderlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/rl_ticker_detail">

        <TextView
            android:text="@string/order_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/ten_dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            app:cardCornerRadius="@dimen/five_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:baselineAligned="false">

                        <TextView
                            android:layout_width="0sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="@dimen/thirteen_sp"
                            android:layout_height="wrap_content"
                            android:text="@string/bid_price"/>

                        <TextView
                            android:layout_width="0sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="@dimen/thirteen_sp"
                            android:layout_height="wrap_content"
                            android:text="@string/qty"
                            android:textColor="@color/green"/>


                        <TextView
                            android:layout_width="0sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="@dimen/thirteen_sp"
                            android:layout_height="wrap_content"
                            android:text="@string/qty"
                            android:textColor="@color/red"/>

                        <TextView
                            android:id="@+id/askAmount"
                            android:layout_width="0sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="@dimen/thirteen_sp"
                            android:layout_height="wrap_content"
                            android:text="@string/ask_price"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_orderList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/str_refresh"
        android:backgroundTint="@color/purple_500"
        android:visibility="gone"
        android:layout_margin="16dp"
        android:src="@drawable/ic_sync"/>

    <ProgressBar
        android:id="@+id/pb_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/design_default_color_primary"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>